# nrcan-spot-ortho

./: .gitignore  LICENSE  README.md  catalog.json  environment.yml  setup.cfg
canada-spot-orthoimages/: catalog.json
canada-spot-orthoimages/canada-spot4-orthoimages/: collection.json
canada-spot-orthoimages/canada-spot5-orthoimages/: collection.json
canada-spot-orthoimages/canada-spot5-orthoimages/S5_2007/: catalog.json
canada-spot-orthoimages/canada-spot5-orthoimages/S5_2007/S5_09537_5435_20070531/: S5_09537_5435_20070531.json
docker/: Dockerfile  Dockerfile-dev  build  cibuild  console  docs-server  format  notebook  stac  test
docs/: installation_and_basic_usage.ipynb
scripts/: publish
src/stactools/nrcan_spot_ortho/: __init__.py  cog.py  commands.py  geobase_ftp.py  stac.py  stac_templates.py  utils.py
src/stactools/spot/: __init__.py  cog.py  commands.py  geobase_ftp.py  stac.py  stac_templates.py  utils.py
tests/: test_commands.py  test_module.py  test_utils.py
