[metadata]
name = stactools-spot
version = attr: stactools.spot.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = jtownend@sparkgeo.com
url = https://github.com/stactools-spots/stactools-spot
project_urls =
    Documentation = https://stactools-spot.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-spots/stactools-spot/issues
keywords = 
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools ~= 0.1

[options.packages.find]
where = src
