[metadata]
name = stactools-nrcan_spot_ortho
version = attr: stactools.nrcan_spot_ortho.__version__
description = A subpackage of stactools for working with orthorectified SPOT 4 and SPOT 5 data.
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = jtownend@sparkgeo.com
url = https://github.com/stactools-nrcan_spot_ortho/stactools-nrcan_spot_ortho
project_urls =
    Documentation = https://stactools-nrcan_spot_ortho.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-nrcan_spot_ortho/stactools-nrcan_spot_ortho/issues
keywords = 
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1
    fiona
    boto3
    s3fs

[options.packages.find]
where = src
